# JarvasxAxiom

./: .gitignore  Cargo.toml  README.md  TECHNICAL_DOCUMENTATION.md
sovereign-cli/: Cargo.toml
sovereign-core/: Cargo.toml
sovereign-core/src/: lib.rs
sovereign-finance/: Cargo.toml
sovereign-finance/src/: lib.rs
sovereign-mesh/: Cargo.toml
sovereign-mesh/src/: lib.rs
sovereign-node/: Cargo.toml
sovereign-node/src/: main.rs  service_loop.rs
sovereign-protocol/: Cargo.toml
sovereign-protocol/src/: lib.rs
sovereign-runtime-wasm/: Cargo.toml
sovereign-runtime-wasm/src/: lib.rs
