[package]
name = "sovereign-mesh"
version = "0.3.1"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "pnet", "macros", "kad", "ping"] }
tokio = { version = "1.34", features = ["full"] }
log = "0.4"
anyhow = "1.0"
hex = "0.4"
futures = "0.3"
