[package]
name = "sovereign-node"
version = "0.3.0"
edition = "2021"

[dependencies]
sovereign-protocol = { path = "../sovereign-protocol" }
sovereign-mesh = { path = "../sovereign-mesh" }
sovereign-finance = { path = "../sovereign-finance" }
sovereign-core = { path = "../sovereign-core" }
sovereign-runtime-wasm = { path = "../sovereign-runtime-wasm" }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "net", "io-util"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
env_logger = "0.11"
# windows-services = "0.2"  # Not available on macOS
machine-uid = "0.3"
futures = "0.3"
# For macOS Unix domain sockets instead of named pipes
# tokio::net::UnixListener, etc.
